= weightedpicker changelog

== Master (for 0.1.2)

== Version 0.1.1 [2013-04-18] released
  Add bin/weight to deal with weight yaml.
  Add WeightedPicker::names.
  Add WeightedPicker::dump_histgram.

== Version 0.1.0
  Use integer alternative to float.
  Add test for 'pick' method.

  WeightedPicker::Tree is added.
  WeightedPicker::Tree::Node is added.

  Change treatment of values over MAX and under MIN.
  Change user interface around initialize and merge.
  Change main weight range to between 2^0 and 2^16.

== Version 0.0.1
  bugfix.

== Version 0.0.0
  initiali release.